--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.startup.sayurku.main.MainActivity">
+    tools:context="com.example.startup.sayurku.main.ItemActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -16,21 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.NoActionBar" >
-
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
             <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp">
-                <TextView
+                <ImageView
                     android:layout_centerVertical="true"
-                    android:id="@+id/category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:id="@+id/back"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/back"
                     />
 
                 <RelativeLayout
@@ -70,17 +67,10 @@
                     android:src="@drawable/search"
                     />
             </RelativeLayout>
-
-
-
-
-        </android.support.v7.widget.Toolbar>
-
+            </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-
-
+    <include layout="@layout/content_item" />
 
 </android.support.design.widget.CoordinatorLayout>
