--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -30,4 +30,16 @@
         android:shadowColor="@color/black"
         android:text="android.studio@android.com" />
 
+
+    <TextView
+        android:layout_gravity="right"
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/red"
+        android:shadowColor="@color/black"
+        android:textSize="20dp"
+        android:text="Logout" />
+
+
 </LinearLayout>
