--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -4,8 +4,32 @@
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true">
-
-
+    <LinearLayout
+        android:id="@+id/daftar"
+        android:background="@color/softgray"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp">
+        <TextView
+            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sudah punya akun? "/>
+        <TextView
+            android:id="@+id/btnLinkToLoginScreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MASUK"
+            android:textColor="@color/colorAccent"
+            android:textSize="18dp" />
+    </LinearLayout>
+<ScrollView
+    android:id="@+id/field"
+    android:layout_above="@id/daftar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
 
         android:orientation="vertical"
@@ -38,6 +62,62 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="Nama" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_margin="5dp"
+                android:src="@drawable/company"
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+            <EditText android:id="@+id/company"
+                android:textSize="18dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Nama Perusahaan" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_margin="5dp"
+                android:src="@drawable/address"
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText android:id="@+id/address"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_weight="3"
+                    android:textSize="18dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:hint="Alamat Pengiriman" />
+                <TextView android:id="@+id/open_map"
+                    android:textColor="@color/white"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:background="@drawable/border_round_yellow"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="12dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:hint="Open Map" />
+            </LinearLayout>
         </LinearLayout>
 
         <!-- Email Label -->
@@ -167,25 +247,7 @@ android:layout_marginTop="10dp"
 
 
     </LinearLayout>
-    <LinearLayout
-        android:background="@color/softgray"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="10dp">
-        <TextView
-            android:textSize="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sudah punya akun? "/>
-        <TextView
-            android:id="@+id/btnLinkToLoginScreen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MASUK"
-            android:textColor="@color/colorAccent"
-            android:textSize="18dp" />
-    </LinearLayout>
+</ScrollView>
+
 
 </RelativeLayout>
