--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<group
+    android:orderInCategory="1"
+    android:id="@+id/buy_type"
+    android:checkableBehavior="single">
+    <item
+        android:id="@+id/retail"
+        android:orderInCategory="100"
+        android:title="RETAIL"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/grosir"
+        android:orderInCategory="100"
+        android:title="GROSIR"
+        app:showAsAction="never" />
+</group>
     <group
+        android:orderInCategory="2"
         android:id="@+id/category"
         android:checkableBehavior="single">
 
